Implement a demo calling into the Futhark support to render .vm SDFs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "fidget",
     "demos/constraints",
     "demos/cli",
+    "demos/polymorph",
     "demos/viewer",
     "workspace-hack",
 ]
